exhibitera/apps/media_player/media_player.css
:root {
    /* Colors */
    --background-color: black;
    --subtitleColor: white;
    --progressActiveColor: #008000;
    --progressInactiveColor: #808080;
    --progressBackgroundColor: #64646499;

    /* Font facts */
    --subtitle-font: "subtitles-default";

    /* Font modifiers */
    --subtitle-font-adjust: 0;

    /* Misc modifiers */
    --progress-indicator-size: 1;
  }

/* Font definitions */
@font-face {
    font-family: "annotation-default";
    src: url("../_fonts/OpenSans-Regular.ttf");
}
@font-face {
    font-family: "subtitles-default";
    src: url("../_fonts/OpenSans-Regular.ttf");
}

body,html {
    margin: 0;
    padding: 0;
    background: var(--background-color);
    background-size: cover;
    background-position: center;
    overflow: hidden;
    height: 100vh;
}
.align-center {
    transform: translate(-50%, 0);
}
.align-right {
    transform: translate(-100%, 0);
}
.annotation {
    user-select: none;
    cursor: none;
    z-index: 9999;
}
.progress-dot {
    width: calc(var(--progress-indicator-size) * 1vmax);
    height: calc(var(--progress-indicator-size) * 1vmax);
    border-radius: 50%;
    background-color: var(--progressInactiveColor);
    margin: calc(var(--progress-indicator-size) * 0.25vmax);
    transition: all 0.3s ease;
}

.progress-dot.active {
    width: calc(var(--progress-indicator-size) * 3vmax);
    height: calc(var(--progress-indicator-size) * 1vmax);
    border-radius: calc(var(--progress-indicator-size) * 0.6vmax);
    overflow: hidden;
    background-color: var(--progressInactiveColor);
}

.progress-dot.active .fill {
    height: 100%;
    width: 0%;
    background-color: var(--progressActiveColor);
    transition: width 0.1s linear;
}

#imageOverlay {
    width: 100vw;
    height: 100vh;
    position: absolute;
    line-height: 100%;
    top: 0px;
    left: 0px;
    opacity: 0;
    margin: 0;
    padding: 0;
    cursor: none;
    z-index: 1;
}
#fullscreenImage {
    width: 100vw;
    height: 100vh;
    margin: 0;
    padding: 0;
    user-select: none;
    webkit-user-select: none;
}
#modelOverlay {
    width: 100vw;
    height: 100vh;
    position: absolute;
    top: 0px;
    left: 0px;
    opacity: 0;
    cursor: none;
}
#modelViewer {
    width: 100%;
    height: 100%;
}
#videoOverlay {
    width: 100vw;
    height: 100vh;
    position: absolute;
    top: 0px;
    left: 0px;
    opacity: 0;
    cursor: none;
}
#fullscreenVideo {
    width: 100%;
    height: 100%;
    user-select: none;
    webkit-user-select: none;
}
#fullscreenVideo::cue {
    font-size: calc(6vh + var(--subtitle-font-adjust) * 1vmax);
    font-family: var(--subtitle-font);
    color: var(--subtitleColor);
}
#progressContainer {
    z-index: 999;
    position: fixed;
    width: 100%;
    padding: 0.3vmax;
}
#progressIndicator {
    height: calc(var(--progress-indicator-size) * 2vmax);
    border-radius: calc(var(--progress-indicator-size) * 1vmax);
    background-color: var(--progressBackgroundColor);
}
#watermark {
    position: absolute;
    object-fit: contain;
}

